Istio/retry/virtualservice-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-cb
spec:
  gateways:
    - cb-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /circuit
      route:
        - destination:
            host: python-cb
            port:
              number: 9000
            subset: v1
          weight: 100
      retries:
        attempts: 5
        perTryTimeout: 20ms
        retryOn: '5xx'


#http://emitra-cb-cb-gateway-525eca1d5089dbdc-istio-system.apps.emitraocs.sdc.raj.gov.in/circuit/internal
